[package]
name = "titan_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.98", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.40"

[lib]
proc-macro = true
