[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titan_macros = { path = "../macros" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
paste = "1.0.7"
itertools = "0.10.3"

